Change 'Abstract and summary' field name to 'Description' fixes #73

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,7 @@ en:
         genre_string: "Genre"
         identifier: "External ID"
         date_of_work: "Date"
+        description: "Description"
     metadata_help:
       generic_file:
         alternative: "Genre of the file."
