--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,7 +29,34 @@ en:
         description: "Description"
     metadata_help:
       generic_file:
-        alternative: "Genre of the file."
+        title: "Use a given title if available; otherwise, construct a brief descriptive title that uniquely identifies the work. Use title case (ex: \"The Quick Brown Fox Jumps Over the Lazy Dog\") for formal and published titles and sentence case (ex: \"The quick brown fox jumps over the lazy dog\") for constructed and supplied titles. Required to save."
+        identifier: "Enter an Object ID, Bibliographic or Item Number, Accession, ASpace Reference, or Oral History Interview Number. Use multiple IDs to distinguish the particular holding of a work with multiple copies. The external ID does not necessarily have to be unique but should point to a source record. Bib Numbers will be used to generate a link to the OPAC. Ex: • 2008.043.002 • B10337957 • I11201022. Required to save."
+        maker: "Any individual, group, or organization responsible for the work, either primarily or more auxiliary, if relevant. Field supports VIAF (includes Library of Congress/NACO authorities) autocomplete. If a name is not available, contact the Digital Projects and Metadata Librarian. Denote specific roles when possible; otherwise, Creator and Contributor can be used as default roles. Required if available."
+        date_of_work: "Date(s) of creation or publication. Three levels of granularity can be used for precise dates—year (YYYY), year-month (YYYY-MM), and year-month-day (YYYY-MM-DD). Input discrete dates into the Start/Individual field. For date ranges or uncertainties, accepted formats are YYYY-YYYY, before YYYY, after YYYY, circa YYYY, YYY0 decade, YY00 century, or undated. For dates expressed in alternative formats or systems, record the original value as is in Note, which will display in parentheses after the W3C date. Required."
+        place_of_publication: "Location of origin for the work. Regions can include neighborhood, city, state, or country. Note that places depicted in a work are topical and should be cataloged as Subjects. Field supports FAST (derived from Library of Congress authorities) autocomplete."
+        place_of_manufacture: "Location of origin for the work. Regions can include neighborhood, city, state, or country. Note that places depicted in a work are topical and should be cataloged as Subjects. Field supports FAST (derived from Library of Congress authorities) autocomplete."
+        place_of_interview: "Location of origin for the work. Regions can include neighborhood, city, state, or country. Note that places depicted in a work are topical and should be cataloged as Subjects. Field supports FAST (derived from Library of Congress authorities) autocomplete."
+        resource_type: "Format in which the work is expressed. Select the content type(s) that best reflects the original work and not the digital resource. Use Ctrl+click to make multiple selections. Required."
+        genre_string: "The nature of the work, covering aspects such as content, form, function, physical character, style, or technique. Select the genre(s) of the work or its content. If a desired term is not available, contact the Digital Projects and Metadata Librarian. Required."
+        medium: "Use for the materials or physical carrier of the work. Field supports Getty’s Art & Architecture Thesaurus autocomplete. Ex: • Audiocassettes • Celluloid • Dye • Nylon."
+        extent: "Use for size or duration of work. Input numerical values up to two decimal places (avoid fractions to prevent confusion). If the value is less than one, precede the decimal marker with a zero. Specify dimensional sides (length L, width W, height H, depth D, diameter Diam., circumference Circ., etc.) and units of measurement (whether metric or U.S.) when applicable. Use lowercase letters for units of measurement, with periods after U.S. system units only. For oral histories, detail number of transcript pages and the total audio running time in hours, minutes, and seconds. Ex: • 0.75 in. L x 2.5 in. W • 22 cm H x 80 cm Diam. • 116 pages • 1 hour, 49 minutes, 23 seconds. Recommended."
+        language: "Refers to language of the intellectual content of the work. Input the language of the work being described, even if it is a translation or if the original is in a different language. Field supports local autocomplete."
+        description: "Summary, highlights, or other contextual information about the work. Use full sentences for descriptive text. Enter specialized or additional information not included in other fields, and consider using keywords that users may search for. Existing abstracts can also be copied from available sources. Recommended."
+        #FIXME: missing inscription
+        subject: "Topical terms describing the “aboutness” of the work. Depicted persons, places, and time periods are covered here as well. Field supports FAST (derived from Library of Congress authorities) autocomplete. Ex: • Alchemy • Integrated circuits. Recommended."
+        division: "Select the CHF administrative entity responsible for the management and curation of the physical work. Required."
+        series_arrangement: "Archival materials only: specify series and subseries of work, where relevant. Capture the information as listed in the finding aid."
+        physical_container: "Archival and serialized materials only: specify either box/folder or volume/part numbers, where relevant."
+        #this field doesn't exist...
+        #Related Materials Other Hydra resources related to the work.
+        related_url: "Input permanent link(s) to additional information or content relating to the work outside of Hydra, such as URLs to OPAC records, finding aids, exhibit pages, and other collections resources. Recommended."
+        rights: "Information on copyright status and licensing. More TBD. Required."
+        rights_holder: "The individual or organization owning or managing rights to the work. Input the name of the copyright holder in natural order. Required if available."
+        credit_line: "Attribution information for the digital representation of the work. More TBD."
+        # this field was deleted
+        #provenance: "Record of ownership or custody of the work."
+        file_creator: "Select the individual, group, or organization responsible for producing the digital representation of the work, such as the digitizing agent or file author. If a desired entry is not available, contact the Digital Projects and Metadata Librarian. Recommended."
+        admin_notes: "Use for any internal notes about the digital object or physical work, such as copyright concerns, digitization errors, legacy metadata, etc. Record first initial, last name, and date with the note in case a follow-up is necessary."
   sufia:
     product_name:       "CHF Digital Collections (Alpha)"
     institution_name:   "CHF"
