Change 'alpha' to 'beta' fixes #128

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,6 @@ en:
         file_creator: "Select the individual, group, or organization responsible for producing the digital representation of the work, such as the digitizing agent or file author. If a desired entry is not available, contact the Digital Projects and Metadata Librarian. Recommended."
         admin_note: "Use for any internal notes about the digital object or physical work, such as copyright concerns, digitization errors, legacy metadata, etc. Record first initial, last name, and date with the note in case a follow-up is necessary."
   sufia:
-    product_name:       "CHF Digital Collections (Alpha)"
+    product_name:       "CHF Digital Collections (Beta)"
     institution_name:   "CHF"
     institution_name_full: "The Chemical Heritage Foundation"
