Remove image attribution from front page, fixes #143.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,3 +60,4 @@ en:
     product_name:       "CHF Digital Collections (Beta)"
     institution_name:   "CHF"
     institution_name_full: "The Chemical Heritage Foundation"
+    background_attribution: ""
