--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,13 +22,13 @@
 en:
   simple_form:
     labels:
-      generic_file:
+      generic_work:
         genre_string: "Genre"
         identifier: "External ID"
         date_of_work: "Date"
         description: "Description"
-    metadata_help:
-      generic_file:
+    hints:
+      generic_work:
         title: "Use a given title if available; otherwise, construct a brief descriptive title that uniquely identifies the work. Use title case (ex: \"The Quick Brown Fox Jumps Over the Lazy Dog\") for formal and published titles and sentence case (ex: \"The quick brown fox jumps over the lazy dog\") for constructed and supplied titles. Required to save."
         identifier: "Enter an Object ID, Bibliographic or Item Number, Accession, ASpace Reference, or Oral History Interview Number. Use multiple IDs to distinguish the particular holding of a work with multiple copies. The external ID does not necessarily have to be unique but should point to a source record. Bib Numbers will be used to generate a link to the OPAC. <em><strong>Ex: • 2008.043.002 • B10337957</strong></em>. Required to save."
         maker: "Any individual, group, or organization responsible for the work, either primarily or more auxiliary, if relevant. Field supports VIAF (includes Library of Congress/NACO authorities) autocomplete. If a name is not available, contact the Digital Projects and Metadata Librarian. Denote specific roles when possible; otherwise, Creator and Contributor can be used as default roles. Required if available."
