--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -1,11 +1,12 @@
 en:
   sufia:
-    product_name:       "Sufia"
-    product_twitter_handle: "@HydraSphere"
-    institution_name:   "Institution Name"
-#    institution_name_full:   "The Institution Name"
-    account_name:       "My Institution Account Id"
+    product_name:       "CHF Digital Collections (Beta)"
+    institution_name:   "CHF"
+    institution_name_full: "The Chemical Heritage Foundation"
+    background_attribution: ""
+    account_name:       "CHF Digital Collections user ID"
+    product_twitter_handle: "@ChemHeritage"
     directory:
-      suffix:           "@example.org"
+      suffix:           "@chemheritage.org"
     footer:
       copyright_html: "<strong>Copyright &copy; 2016 Project Hydra</strong> Licensed under the Apache License, Version 2.0"
