Update permissions badge label for institution access, fix #318

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -1,4 +1,6 @@
 en:
+  curation_concerns:
+    institution_name:   "CHF"
   sufia:
     product_name:       "CHF Digital Collections (Beta)"
     institution_name:   "CHF"
