Different title for single vs batch work upload form
Not sure if there's a better way to organize the i18n keys, this
seemed clever to me, or might be too confusing.

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -12,3 +12,8 @@ en:
       suffix:           "@chemheritage.org"
     footer:
       copyright_html: "<strong>Copyright &copy; 2016 Project Hydra</strong> Licensed under the Apache License, Version 2.0"
+    works:
+      controllers:
+        batch_uploads:
+          new:
+            header: Add Batch of Multiple New Works
