--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -1,3 +1,8 @@
 en:
   blacklight:
     application_name: 'CHF Hydra'
+    search:
+      fields:
+        show:
+          resource_type: Format
+          division: Department
