--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -15,3 +15,6 @@ en:
         batch_uploads:
           new:
             header: Add Batch of Multiple New Works
+        generic_works:
+          new:
+            header: Add New Work
