Make creator / contributor labels singular; fixes #443
Removed the label from the view since translation is given precendence
over the option. 'contributor' appeared to be defined in an upstream
locale file as plural, so it wasn't overriding from the view.

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -6,3 +6,5 @@ en:
         show:
           resource_type: Format
           division: Department
+          creator_of_work: Creator
+          contributor: Contributor
