Change search label 'All of Sufia' to just 'All', fixes #447

--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -18,3 +18,8 @@ en:
         generic_works:
           new:
             header: Add New Work
+    search:
+      form:
+        option:
+          all:
+            label_long: All
