change date facet submit button styling

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -8,3 +8,5 @@ en:
           division: Department
           creator_of_work: Creator
           contributor: Contributor
+    range_limit:
+      submit_limit: Apply
