--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -1,6 +1,6 @@
 en:
   blacklight:
-    application_name: 'Digital Collections'
+    application_name: 'Chemical Heritage Foundation Digital Collections'
     search:
       fields:
         show:
