--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -2,7 +2,7 @@ en:
   curation_concerns:
     institution_name:   "CHF"
   sufia:
-    product_name:       "Digital Collections"
+    product_name:       "Chemical Heritage Foundation Digital Collections"
     institution_name:   "CHF"
     institution_name_full: "The Chemical Heritage Foundation"
     background_attribution: ""
