--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -8,5 +8,8 @@ en:
           division: Department
           creator_of_work: Creator
           contributor: Contributor
+      index:
+          list:
+              label: "%{label}"
     range_limit:
       submit_limit: Apply
