--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,3 +24,7 @@ en:
     hints:
       defaults:
         files: '' # no file hint for now
+  views:
+    pagination_compact:
+      next: "Next" # get rid of ugly unicode carets
+      previous: "Previous" # get rid of ugly unicode carets
