label genre_string as Genre on show page

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -10,6 +10,7 @@ en:
           division: Department
           creator_of_work: Creator
           contributor: Contributor
+          genre_string: Genre
       index:
           list:
               label: "%{label}"
