fix capitalization of related_url label

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -11,6 +11,7 @@ en:
           creator_of_work: Creator
           contributor: Contributor
           genre_string: Genre
+          related_url: Related URL
       index:
           list:
               label: "%{label}"
