change many instances of org name for rebrand

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -1,6 +1,6 @@
 en:
   blacklight:
-    application_name: 'Chemical Heritage Foundation Digital Collections'
+    application_name: 'Science History Institute Digital Collections'
     search:
       filters:
         title: You searched for # remove colon from default
