--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -1,15 +1,15 @@
 en:
   curation_concerns:
-    institution_name:   "CHF"
+    institution_name:   "Science History Institute"
   sufia:
-    product_name:       "Chemical Heritage Foundation Digital Collections"
+    product_name:       "Science History Institute Digital Collections"
     institution_name:   "CHF"
-    institution_name_full: "The Chemical Heritage Foundation"
+    institution_name_full: "The Science History Institute"
     background_attribution: ""
-    account_name:       "CHF Digital Collections user ID"
-    product_twitter_handle: "@ChemHeritage"
+    account_name:       "Digital Collections user ID"
+    product_twitter_handle: "@SciHistoryOrg"
     directory:
-      suffix:           "@chemheritage.org"
+      suffix:           "@sciencehistory.org"
     works:
       controllers:
         batch_uploads:
