--- a/config/locales/sufia.en.yml
+++ b/config/locales/sufia.en.yml
@@ -1,9 +1,9 @@
 en:
   curation_concerns:
-    institution_name:   "Science History Institute"
+    institution_name:   "the Institute"
   sufia:
     product_name:       "Science History Institute Digital Collections"
-    institution_name:   "CHF"
+    institution_name:   "the Institute"
     institution_name_full: "The Science History Institute"
     background_attribution: ""
     account_name:       "Digital Collections user ID"
