update physical container edit hint
per #998

--- a/config/locales/generic_work.en.yml
+++ b/config/locales/generic_work.en.yml
@@ -40,7 +40,7 @@ en:
         exhibition: "Select any current or past Museum exhibition(s) that the work has been displayed in, if applicable. If a desired entry is not available, contact the Digital Projects and Metadata Librarian."
         source: "For standalone digitization from a larger work, use for the name of the work from which the described material is derived. Can be left blank if the digital object is related to its parent work in the repository."
         series_arrangement: "Archival materials only: specify series and subseries of work, where relevant. Capture the information as listed in the finding aid."
-        physical_container: "Archival and serialized materials only: specify either box/folder or volume/part numbers, where relevant."
+        physical_container: "For archival and serialized materials: specify either box/folder or volume/part numbers, where relevant. For library manuscripts, specify shelfmark."
         #this field doesn't exist...
         #Related Materials Other Hydra resources related to the work.
         related_url: "Input permanent link(s) to additional information or content relating to the work outside of Hydra, such as URLs to OPAC records, finding aids, exhibit pages, and other collections resources. Recommended."
