--- a/config/locales/generic_work.en.yml
+++ b/config/locales/generic_work.en.yml
@@ -39,7 +39,7 @@ en:
         division: "Select the CHF administrative entity responsible for the management and curation of the physical work. Required."
         exhibition: "Select any current or past Museum exhibition(s) that the work has been displayed in, if applicable. If a desired entry is not available, contact the Digital Projects and Metadata Librarian."
         project: "Select any current or past projects that the work is a part of, if applicable. If a desired entry is not available, contact the Digital Projects and Metadata Librarian."
-        provenance: 'For fine art materials, input provenance information following Provenance Style Guide document (P:\Eddleman Institute\Museum\Collections\Art Collections\Provenance\Provenance_Style_Guide.docx). Provenance information can either be found in Past Perfect or within provenance files in the Museum department. Allowed HTML tags: <code>b</code>, <code>i</code>, <code>cite</code>, <code>a</code>'
+        provenance: 'For fine art materials, input provenance information following Provenance Style Guide document (P:\Eddleman Institute\Museum\Collections\Art Collections\Provenance\Provenance_Style_Guide.docx). Provenance information can either be found in Past Perfect or within provenance files in the Museum department. Per the style guide, you may add notes at the bottom. Separate notes from the rest of the info using the word "NOTES:" on its own line. Allowed HTML tags: <code>b</code>, <code>i</code>, <code>cite</code>, <code>a</code>'
         source: "For standalone digitization from a larger work, use for the name of the work from which the described material is derived. Can be left blank if the digital object is related to its parent work in the repository."
         series_arrangement: "Archival materials only: specify series and subseries of work, where relevant. Capture the information as listed in the finding aid."
         physical_container: "For archival and serialized materials: specify either box/folder or volume/part numbers, where relevant. For library manuscripts, specify shelfmark."
@@ -50,7 +50,5 @@ en:
         rights_holder: "The individual or organization owning or managing rights to the work. Input the name of the copyright holder in natural order. Required if available."
         credit_line: "Default attribution information for the work."
         additional_credit: "Additional attribution information, such as for the digital representation of the work. Appends <strong>Credit Line</strong>."
-        # this field was deleted
-        #provenance: "Record of ownership or custody of the work."
         file_creator: "Select the individual, group, or organization responsible for producing the digital representation of the work, such as the digitizing agent or file author. If a desired entry is not available, contact the Digital Projects and Metadata Librarian. Recommended."
         admin_note: "Use for any internal notes about the digital object or physical work, such as copyright concerns, digitization errors, legacy metadata, etc. Record first initial, last name, and date with the note in case a follow-up is necessary."
